force-app/main/default/objects/StripePaymentMethod__c/StripePaymentMethod__c.object-meta.xml
<CustomObject>
    <label>Stripe Payment Method</label>
    <nameField>
        <displayFormat>SPM-{0000}</displayFormat>
        <label>Stripe Payment Method Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Payment Methods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>