force-app/main/default/objects/StripePaymentMethod__c/fields/Billing_Details__c.field-meta.xml
<CustomField>
    <fullName>Billing_Details__c</fullName>
    <label>Billing Details</label>
    <type>TextArea</type>
</CustomField>