force-app/main/default/objects/StripePaymentMethod__c/fields/Last_Four_Digits__c.field-meta.xml
<CustomField>
    <fullName>Last_Four_Digits__c</fullName>
    <label>Last Four Digits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>