force-app/main/default/objects/StripePaymentMethod__c/fields/Stripe_Customer__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stripe Customer</label>
    <referenceTo>Stripe_Customer__c</referenceTo>
    <relationshipName>StripePaymentMethods</relationshipName>
    <type>Lookup</type>
</CustomField>