force-app/main/default/objects/StripePaymentMethod__c/fields/StripePaymentMethodId__c.field-meta.xml
<CustomField>
    <fullName>StripePaymentMethodId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Stripe Payment Method</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>